# spreadsheet-api

./: .gitignore  LICENSE  Makefile  README.rst  config-example.toml  pyproject.toml
spreadsheet_api/: app.py  config.py  main.py  worksheet.py
spreadsheet_api/templates/: index.html
