[tool.poetry]
name = "spreadsheet-api"
version = "0.0.1"
description = "Generate a simpe REST API from your Google spreadsheet"
authors = ["Julien Mailleret <8582351+jmlrt@users.noreply.github.com>"]

[tool.poetry.dependencies]
aiogoogle = "^3.2.1"
python = "^3.10"
quart = "^0.19.7"

[tool.poetry.dev-dependencies]
pre-commit = "*"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
